* Add unique constraint to the code field